[gd_scene load_steps=22 format=3 uid="uid://bly7ovcvj8dyu"]

[ext_resource type="Script" path="res://Scripts/scene_loader.gd" id="1_co8ji"]
[ext_resource type="Script" path="res://CustomScripts/Logic/AppearOnPress.gd" id="2_wr5x8"]
[ext_resource type="FontFile" uid="uid://dku4ohp5rmpr5" path="res://Fonts/DBStylez.ttf" id="3_pveot"]
[ext_resource type="AudioStream" uid="uid://b6u3qkb0mte27" path="res://Sounds/Pickup.ogg" id="4_rfe3t"]
[ext_resource type="Texture2D" uid="uid://ctm6n7gvixbc2" path="res://Sprites/Psychopompface.png" id="5_i6c7y"]
[ext_resource type="Texture2D" uid="uid://cx431hrth8cq8" path="res://Sprites/UI/Psychopomp tip.png" id="6_vvthx"]
[ext_resource type="Script" path="res://Scripts/SpriteShake.cs" id="7_05qak"]
[ext_resource type="Script" path="res://Scripts/Tweener2D.cs" id="8_w306t"]
[ext_resource type="Script" path="res://RandomSizeTween.cs" id="9_b1u8w"]
[ext_resource type="Script" path="res://CustomScripts/Logic/TipLoader.gd" id="10_wuwae"]
[ext_resource type="Material" uid="uid://nk5prdh13401" path="res://PSX.tres" id="11_sf53k"]
[ext_resource type="AudioStream" uid="uid://bc1eqopo3khhg" path="res://Sounds/WeirdGong.ogg" id="12_d2sxp"]
[ext_resource type="Script" path="res://CustomScripts/Logic/KOMStats.gd" id="13_b2i4f"]

[sub_resource type="Curve" id="1"]
max_value = 425.0
_data = [Vector2(0, 13.4211), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="2"]
curve = SubResource("1")

[sub_resource type="Curve" id="3"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.534447, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="4"]
curve = SubResource("3")

[sub_resource type="ParticleProcessMaterial" id="5"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(540, 1, 1)
angle_min = -10.0
angle_max = 10.0
angle_curve = SubResource("2")
gravity = Vector3(0, -100, 0)
scale_curve = SubResource("4")
color = Color(0.694118, 0.721569, 0.596078, 1)

[sub_resource type="QuadMesh" id="6"]

[sub_resource type="SphereMesh" id="7"]
radial_segments = 12
rings = 10

[sub_resource type="PrismMesh" id="8"]

[node name="Node2D" type="Node2D"]

[node name="SceneLoader" type="Node" parent="." node_paths=PackedStringArray("LoadText")]
script = ExtResource("1_co8ji")
LoadText = NodePath("../RichTextLabel3")

[node name="ConsoleParent" type="Node2D" parent="." node_paths=PackedStringArray("SoundEffect", "OtherNodes")]
script = ExtResource("2_wr5x8")
key = 4194335
SoundEffect = NodePath("AudioStreamPlayer")
OtherNodes = [NodePath("RichTextLabel4")]

[node name="RichTextLabel4" type="RichTextLabel" parent="ConsoleParent"]
visible = false
z_index = 2
offset_right = 662.0
offset_bottom = 70.0
theme_override_fonts/normal_font = ExtResource("3_pveot")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Console Output"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ConsoleParent"]
stream = ExtResource("4_rfe3t")
volume_db = -9.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -37.0
offset_top = -35.0
offset_right = 990.0
offset_bottom = 578.0
color = Color(0, 0, 0, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.647059, 0.121569, 0.196078, 1)
position = Vector2(480, 600)
process_material = SubResource("5")
texture = ExtResource("5_i6c7y")
lifetime = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(801, 365)
texture = ExtResource("6_vvthx")
script = ExtResource("7_05qak")
power = 2.0

[node name="MeshInstance2D7" type="MeshInstance2D" parent="."]
modulate = Color(0.235294, 0.0431373, 0.027451, 1)
position = Vector2(406, 219)
scale = Vector2(396, 248)
mesh = SubResource("6")
script = ExtResource("8_w306t")
Time = 4.0
tweenPosition = true
endPosition = Vector2(0, -10)
endrotation = 45.0
endScale = 3.0

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(0.156863, 0, 0.00784314, 1)
position = Vector2(20, 480)
scale = Vector2(300, 300)
mesh = SubResource("7")
script = ExtResource("9_b1u8w")
minSize = 200.0
maxSize = 300.0
tweenTime = 2.0

[node name="MeshInstance2D8" type="MeshInstance2D" parent="."]
modulate = Color(0.235294, 0.0431373, 0.027451, 1)
position = Vector2(583, 263)
rotation = -0.95295
scale = Vector2(86.5, 215.25)
mesh = SubResource("8")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 217.0
offset_top = 101.0
offset_right = 597.0
offset_bottom = 161.0
theme_override_colors/default_color = Color(0.647059, 0.121569, 0.196078, 1)
theme_override_fonts/normal_font = ExtResource("3_pveot")
theme_override_font_sizes/normal_font_size = 21
bbcode_enabled = true
text = "[wave]Real World Tip:"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 211.0
offset_top = 120.0
offset_right = 601.0
offset_bottom = 311.0
theme_override_colors/default_color = Color(0.647059, 0.121569, 0.196078, 1)
theme_override_fonts/normal_font = ExtResource("3_pveot")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "[wave][center]
If you work in the food service industry, you can sue you're employer for mental health damages."
scroll_active = false
script = ExtResource("10_wuwae")
tips = Array[String](["You should try estrogen.", "Do not ride elevators when there’s a fire in the building. 
That’s how you’ll guarantee a spot in your town’s local annual Best Corpse Competition. 
Someone will always die better than you. 
You will not win first prize."])

[node name="MeshInstance2D5" type="MeshInstance2D" parent="."]
modulate = Color(0.156863, 0, 0.00784314, 1)
position = Vector2(997, 110)
scale = Vector2(300, 300)
mesh = SubResource("7")
script = ExtResource("9_b1u8w")
minSize = 200.0
maxSize = 300.0
tweenTime = 2.0

[node name="MeshInstance2D2" type="MeshInstance2D" parent="."]
modulate = Color(0.156863, 0, 0.00784314, 1)
position = Vector2(185, 567)
scale = Vector2(200, 200)
mesh = SubResource("7")
script = ExtResource("9_b1u8w")
minSize = 200.0
maxSize = 300.0
tweenTime = 3.0

[node name="MeshInstance2D3" type="MeshInstance2D" parent="."]
modulate = Color(0.156863, 0, 0.00784314, 1)
position = Vector2(-23, 284)
scale = Vector2(200, 200)
mesh = SubResource("7")
script = ExtResource("9_b1u8w")
minSize = 200.0
maxSize = 300.0
tweenTime = 1.0

[node name="MeshInstance2D4" type="MeshInstance2D" parent="."]
modulate = Color(0.156863, 0, 0.00784314, 1)
position = Vector2(897, -12)
scale = Vector2(200, 200)
mesh = SubResource("7")
script = ExtResource("9_b1u8w")
minSize = 200.0
maxSize = 250.0
tweenTime = 1.0

[node name="MeshInstance2D6" type="MeshInstance2D" parent="."]
modulate = Color(0.156863, 0, 0.00784314, 1)
position = Vector2(758, -64)
scale = Vector2(200, 200)
mesh = SubResource("7")
script = ExtResource("9_b1u8w")
minSize = 100.0
maxSize = 200.0
tweenTime = 3.0

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = 21.0
offset_top = 496.0
offset_right = 1085.0
offset_bottom = 553.0
theme_override_colors/default_color = Color(0.647059, 0.121569, 0.196078, 1)
theme_override_fonts/normal_font = ExtResource("3_pveot")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[wave amp=20.0]Loading..."
scroll_active = false

[node name="ColorRect2" type="ColorRect" parent="."]
material = ExtResource("11_sf53k")
offset_right = 969.0
offset_bottom = 538.0
mouse_filter = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_d2sxp")
volume_db = -9.729
pitch_scale = 0.87
autoplay = true

[node name="VerLabel" type="RichTextLabel" parent="."]
z_index = 5
offset_left = 628.0
offset_top = 8.0
offset_right = 1178.99
offset_bottom = 107.0
scale = Vector2(0.635, 0.635)
mouse_filter = 2
theme_override_colors/default_color = Color(0.647059, 0.121569, 0.196078, 1)
theme_override_fonts/normal_font = ExtResource("3_pveot")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[shake rate=20] PLACEHOLDER"

[node name="KOMStats" type="Node" parent="VerLabel" node_paths=PackedStringArray("DeadStarsLabel")]
script = ExtResource("13_b2i4f")
DeadStarsLabel = NodePath("..")
